--- a/htetris.cabal
+++ b/htetris.cabal
@@ -16,6 +16,6 @@ executable htetris
   main-is:             Main.hs
   -- other-modules:
   -- other-extensions:
-  build-depends:       base , random, matrix
+  build-depends:       base , random, matrix, sdl2
   hs-source-dirs:      src
   default-language:    Haskell2010
